--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcc 'QP'
 - !lcsh 'Hygiene -- Juvenile literature'
 - !lcsh 'Health -- Juvenile literature'
+- GITenberg
 title: First Book in Physiology and Hygiene
 url: http://www.gutenberg.org/ebooks/17367
